--- a/public/css/master.css
+++ b/public/css/master.css
@@ -26,7 +26,7 @@ body {
 
 header #logo {
   float:left;
-	margin-left: 100px;
+	margin-left: 10px;
 
 }
 
@@ -1674,24 +1674,19 @@ h1, h2, h3, h4, h5, h6 {
     	border-bottom:#e8491d 2px inset; }*/
 
 #header {
-  padding: 15px 0;
-  position: fixed;
+  padding: 0px;
+  position: sticky;
   left: 0;
   top: 0;
   right: 0;
   transition: all 0.5s;
-  z-index: 997;
+  z-index: 9995;
   background:#35424a;
   color:#ffffff;
   overflow: visible;
-border-bottom:#e8491d 2px inset; }
+  border-bottom:#e8491d 2px inset;
+}
 
-
-#header.header-scrolled {
-  background: rgba(0, 0, 0, 0.9);
-  transition: all 0.5s; }
-  #header.header-scrolled .nav-menu li:hover > a, #header.header-scrolled .nav-menu > .menu-active > a {
-    color: #e8491d; }
 
 @media (max-width: 673px) {
   #logo {
