--- a/public/quickadmin/css/quickadmin-layout.css
+++ b/public/quickadmin/css/quickadmin-layout.css
@@ -49,7 +49,7 @@ Page Header
 ***/
 .page-header.navbar {
     width: 100%;
-    padding: 0 20px 0 20px;
+    padding: 15px 20px 15px 20px;
     margin: 0;
     border: 0px;
     padding: 0px;
@@ -70,7 +70,7 @@ Page Header
 }
 
 .page-header.navbar.navbar-fixed-top {
-    z-index: 9995;
+    z-index: 997;
 }
 
 .page-header.navbar.navbar-static-top {
