--- a/public/quickadmin/css/quickadmin-layout.css
+++ b/public/quickadmin/css/quickadmin-layout.css
@@ -66,7 +66,7 @@ Page Header
     background: #35424a;
     color: #ffffff;
     overflow: visible;
-    border-bottom: #e8491d 5px inset;
+    position: relative;
 }
 
 .page-header.navbar.navbar-fixed-top {
